- BUG: Wrong behavior for 'lock' error. (Patrick Steinhardt)
- CHG: Improved labels and text in dialog when
       creating a copy in repo browser. (Stefan)
- BUG: When showing multiple diffs from the log
       dialog with added files, only the first
       one was shown multiple times. (Stefan)
- BUG: When adding unversioned folders, the
       ignore properties were sometimes ignored. (Stefan)

Version 1.10.0
See the release notes here:
http://tortoisesvn.net/tsvn_1.10_releasenotes.html

Version 1.9.8 (unreleased)
- BUG: GDI leak in repobrowser. (Stefan)
- BUG: Endless loop in vendor-branch. (Stefan)
- CHG: New line margin icons and minor high dpi refinements
       in TortoiseMerge. (Ivan Zhakov)
- BUG: Right click in touch mode wasn't working. (Stefan)
- BUG: TortoiseUDiff shows invalid window title for patch
       files opened from shell. (Ivan Zhakov)
- BUG: "not found" errors could happen for filenames that
       contain the "%" char. (Stefan)
- BUG: TMerge did not select the whole line when clicked
       on the line number. (Stefan)
- BUG: Horizontal scrollbar shown wrong if the view
       in TMerge had only one line. (Stefan)

Version 1.9.7
- BUG: Drag copy-and-add did not add auto-properties. (Stefan)

Version 1.9.6
- BUG: Crash when applying a patch from a drive root. (Stefan)
- BUG: SubWCRev did not account for global
       ignore patterns. (Stefan)
- BUG: TortoiseMerge jumped to the wrong line on startup
       if the view was collapsed. (Stefan)
- BUG: TortoiseMerge: scale whitespace and newline symbol glyphs on High-DPI
       displays when Show Whitespaces option is enabled. (Ivan Zhakov)
- CHG: Minor performance improvement for all operations when status cache is
       disabled. (Ivan Zhakov)
- CHG: Improve startup performance of the update operation in common
       cases. (Ivan Zhakov)
- CHG: Manifest TortoiseBlame and TortoiseUDiff as DPI-aware to avoid
       blurriness in high dpi mode. (Ivan Zhakov)